Set log entries to vertical-align: top. Fixes #3700

--- a/web/skins/classic/css/base/views/log.css
+++ b/web/skins/classic/css/base/views/log.css
@@ -35,3 +35,8 @@ th[data-field="DateTime"] {
   overflow-y: auto;
   height: 100%;
 }
+
+.bootstrap-table .fixed-table-container .table td,
+.bootstrap-table .fixed-table-container .table th {
+  vertical-align: top!important;
+}
